# stuff

./: .gitignore  README.md
song_genre_prediction/: .gitignore  1.preprocessing.ipynb  2.wordcloud.ipynb  3.prediction.ipynb  param_search.txt
static_analyzer/: .gitignore  CMakeLists.txt
static_analyzer/src/: ASTPrinter.cpp  ASTPrinter.h  Analyzer.cpp  Analyzer.h  Check.cpp  Check.h  CheckUndefinedVariable.cpp  CheckUndefinedVariable.h  CheckUnusedVariable.cpp  CheckUnusedVariable.h  Function.cpp  Function.h  Parser.cpp  Scope.cpp  Scope.h  SymbolTable.cpp  SymbolTable.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  Variable.h  main.cpp  utility.h
static_analyzer/src/rapidjson/: cursorstreamwrapper.h  encodings.h  reader.h  stream.h  writer.h
static_analyzer/src/rapidjson/msinttypes/: inttypes.h  stdint.h
static_analyzer/test/: test1.js  test2.js  test3.js
